# 4WEBD

./: .dockerignore  .env.example  Cargo.toml  Dockerfile.workspace.dev  Dockerfile.workspace.prod  docker-compose-coolify.prod.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  postman_api_doc.json  readme.md
auth-service/: Cargo.toml  Dockerfile  Dockerfile.prod  readme.md
auth-service/src/: controller.rs  db.rs  doc.rs  main.rs  model.rs  service.rs
backups-service/: Cargo.toml  Dockerfile  Dockerfile.prod  readme.md
backups-service/src/: controller.rs  cron_jobs.rs  db.rs  doc.rs  extractor.rs  main.rs  model.rs  service.rs
common/: Cargo.toml  readme.md
common/src/: lib.rs  models.rs
common/src/jwt/: external.rs  internal.rs
common/src/utils/: api_response.rs  mod.rs  utils.rs
events-service/: Cargo.toml  Dockerfile  Dockerfile.prod  readme.md
events-service/src/: controller.rs  db.rs  doc.rs  main.rs  model.rs  service.rs
mongo-init-scripts/: init-indexes.js
notifications-service/: Cargo.toml  Dockerfile  Dockerfile.prod  readme.md
notifications-service/src/: controller.rs  cron_jobs.rs  db.rs  doc.rs  email.rs  main.rs  model.rs  service.rs
payments-service/: Cargo.toml  Dockerfile  Dockerfile.prod  readme.md
payments-service/src/: controller.rs  cron_jobs.rs  db.rs  doc.rs  main.rs  model.rs  service.rs
tickets-service/: Cargo.toml  Dockerfile  Dockerfile.prod  readme.md
tickets-service/src/: controller.rs  db.rs  doc.rs  main.rs  model.rs  service.rs
users-service/: Cargo.toml  Dockerfile  Dockerfile.prod  readme.md
users-service/src/: controller.rs  db.rs  doc.rs  main.rs  model.rs  service.rs  utils.rs
