[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
mongodb = "3.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
reqwest = "0.12.14"
validator = { version = "0.20.0", features = ["derive"] }
futures = "0.3.31"
pwned = { git = "https://github.com/wisespace-io/pwned-rs.git" }
common = { path = "../common" }