[package]
name = "events-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
mongodb = "3.2.2"
bson = { version = "2.14.0", features = ["chrono-0_4"] }
serde = { version = "*", features = ["derive"]}
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"]}
chrono = "0.4.40"
dotenv = "0.15.0"
futures-util = "0.3.31"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { git = "https://github.com/spotgamma/utoipa", rev="205f66f782ed8c84c490833c0bb4994181a85d84", features = ["actix-web"] }
common = { path = "../common" }
