[package]
name = "notifications-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
mongodb = "3.2.2"
dotenv = "0.15.0"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
validator = { version = "0.20.0", features = ["derive"] }
common = { path = "../common" }

