[package]
name = "users-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
mongodb = "3.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
reqwest = "0.12.14"
futures-util = "0.3.31"
validator = { version = "0.20.0", features = ["derive"] }
common = { path = "../common" }